# examples

./: .gitignore
posadev/: Cargo.toml  Makefile  Rocket.toml  generate_models.sh
posadev/api_data/: new_event.json
posadev/migrations/2024-12-05-234041_events/: down.sql  up.sql
posadev/src/: auth.rs  claims.rs  db.rs  events.rs  main.rs  models.rs  schema.rs
posadev/templates/: events.html.hbs
posadev/utils/: test_api
